copy一份自定义

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".activity.OneActivity" />
         <activity android:name=".activity.TwoActivity" />
-        <activity android:name=".activity.ThreeActivity"></activity>
+        <activity android:name=".activity.ThreeActivity" />
+        <activity android:name=".activity.LeafLoadingActivity"></activity>
     </application>
 
 </manifest>
