--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="zhou.com.view">
 
+    <!-- android:hardwareAccelerated="false" 关闭整个应用的硬件加速 -->
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -18,7 +20,9 @@
         </activity>
         <activity android:name=".activity.OneActivity" />
         <activity android:name=".activity.TwoActivity" />
-        <activity android:name=".activity.ThreeActivity"></activity>
+        <activity android:name=".activity.ThreeActivity" />
+        <activity android:name=".activity.PathActivity" />
+        <activity android:name=".activity.FiveActivity"></activity>
     </application>
 
 </manifest>
